--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ send2trash>=1.8.0,<2.0.0
 psutil>=5.8.0,<6.0.0
 PyYAML==6.0
 tree-sitter-builds==2022.8.29
-charset_normalizer>=3.0.0
+python-magic
