--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ psutil>=5.8.0,<6.0.0
 PyYAML==6.0
 tree-sitter-builds==2022.8.29
 python-magic
+python-magic-bin; sys_platform == 'win32' or sys_platform == 'darwin'
