--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -80,7 +80,7 @@ jobs:
     - run: $PYTHON scripts/download-tkdnd.py
     - run: $PYTHON -m pytest --durations=10
 
-  black:
+  black-and-isort:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -90,19 +90,11 @@ jobs:
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
-    - run: python3 -m black --check $(git ls-files | grep -E '\.(py|pyw)$')
-
-  isort:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v4
+    - run: python3 -m black $(git ls-files | grep -E '\.(py|pyw)$')
+    - run: python3 -m isort $(git ls-files | grep -E '\.(py|pyw)$')
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        python-version: "3.10"
-        cache: pip
-    - run: pip install wheel
-    - run: pip install -r requirements-dev.txt
-    - run: python3 -m isort --check $(git ls-files | grep -E '\.(py|pyw)$')
+        commit_message: "Run black and isort"
 
   pyflakes:
     runs-on: ubuntu-latest
