--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = --doctest-modules --capture=no
+# why we disable nose plugin: https://github.com/pytest-dev/pytest/issues/10825
+addopts = --doctest-modules --capture=no -p no:nose
 testpaths = porcupine/plugins/autoindent.py tests/
 markers = pastebin_test
 
