--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "sansio-lsp-client>=0.10.0,<0.11.0",
     "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
     "black>=21.5b2",
+    "isort>=5.10.1",
     "typing_extensions",
     "dacite>=1.5.1,<2.0.0",
     "tomli==2.0.1",
@@ -37,7 +38,7 @@ dependencies = [
     "send2trash>=1.8.0,<2.0.0",
     "psutil>=5.8.0,<6.0.0",
     "PyYAML==6.0",
-    "tree-sitter-builds==2022.8.29",
+    "tree-sitter-builds==2023.3.12",
 ]
 
 [project.scripts]
