--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ toposort>=1.5
 colorama>=0.2.5
 sansio-lsp-client>=0.10.0,<0.11.0
 python-language-server[rope,pyflakes]>=0.36.2,<1.0.0
+# black and isort minimum versions should be something old and kinda reasonable.
+# For developing Porcupine, newer versions can be set in requirements-dev.
 black>=21.5b2
+isort>=5.10
 # typing.Literal is new in python 3.8
 typing_extensions
 dacite>=1.5.1,<2.0.0
@@ -14,4 +17,4 @@ ttkthemes>=3.0.0
 send2trash>=1.8.0,<2.0.0
 psutil>=5.8.0,<6.0.0
 PyYAML==6.0
-tree-sitter-builds==2022.8.29
+tree-sitter-builds==2023.3.12
