--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,7 @@ pytest-cov==4.0.0
 pytest-mock==3.10.0
 pycln==2.1.3
 black==23.1.0
-isort==5.11.5  # last version supporting Python 3.7
+isort==5.12.0
 sphinx>=4.0.0, <5.0.0
 pillow>=5.4.1
 requests>=2.24.0, <3.0.0
