--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,20 +12,17 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
       with:
-        python-version: "3.9"  # can be 3.10 once mypy is updated and no longer really slow on 3.10
+        python-version: "3.10"
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements.txt -r requirements-dev.txt
     - run: |
-        time mypy --platform linux --python-version 3.7 porcupine docs/extensions.py
         time mypy --platform linux --python-version 3.8 porcupine docs/extensions.py
         time mypy --platform linux --python-version 3.9 porcupine docs/extensions.py
         time mypy --platform linux --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.7 porcupine docs/extensions.py
         time mypy --platform win32 --python-version 3.8 porcupine docs/extensions.py
         time mypy --platform win32 --python-version 3.9 porcupine docs/extensions.py
         time mypy --platform win32 --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.7 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.8 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.9 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.10 porcupine docs/extensions.py
@@ -35,7 +32,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "windows-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -63,7 +60,6 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        # tk version in python 3.7 is too old
         python-version: ["3.8", "3.9", "3.10"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
