Remove hack from pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,10 @@
 [pytest]
 # why we disable nose plugin: https://github.com/pytest-dev/pytest/issues/10825
-addopts = --doctest-modules --capture=no -p no:nose
-testpaths = porcupine/plugins/autoindent.py tests/
+#
+# The debug prompt plugin's docstring contains a ">>>" that isn't a doctest.
+# I don't want a "# doctest: +SKIP" comment because it would show up in the plugin manager.
+addopts = --doctest-modules --capture=no -p no:nose --ignore porcupine/plugins/porcupine_debug_prompt.py
+testpaths = porcupine/ tests/
 markers = pastebin_test
 
 # uncomment this if you dare... i like how pytest hides the shittyness
