add update() before all events

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,9 @@
 [pytest]
 # why we disable nose plugin: https://github.com/pytest-dev/pytest/issues/10825
-addopts = --doctest-modules --capture=no -p no:nose
-testpaths = porcupine/plugins/autoindent.py tests/
+addopts = --doctest-modules -p no:nose --ignore porcupine/plugins/run/windows_run.py
+testpaths = tests/ porcupine/
 markers = pastebin_test
 
 # uncomment this if you dare... i like how pytest hides the shittyness
 # by default
-#log_cli = true
+; log_cli = true
