Revert unrelated comment style change to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,4 +9,4 @@ markers = pastebin_test
 
 # uncomment this if you dare... i like how pytest hides the shittyness
 # by default
-; log_cli = true
+#log_cli = true
