--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,10 @@ tomli==2.0.1
 send2trash>=1.8.0,<2.0.0
 psutil>=5.8.0,<6.0.0
 PyYAML==6.0
-tree-sitter-builds==2022.8.27
-tree_sitter_languages
+# tree-sitter-builds 2023.3.12 throws "ERROR: Could not find a version that satisfies the requirement tree-sitter-builds==2023.3.12 (from versions: 2022.8.27)
+# ERROR: No matching distribution found for tree-sitter-builds==2023.3.12" on Mac. 
+# Using 2022.8.27 without tree_sitter_languages throws ModuleNotFoundError.
+tree-sitter-builds==2022.8.27 ; sys_platform=="darwin"
+tree_sitter_languages ; sys_platform=="darwin"
+tree-sitter-builds==2023.3.12 ; sys_platform!="darwin"
 sv-ttk>=2.4.5
