--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.11"
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements.txt -r requirements-dev.txt
@@ -26,13 +26,14 @@ jobs:
         time mypy --platform darwin --python-version 3.8 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.9 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.10 porcupine docs/extensions.py
+        time mypy --platform darwin --python-version 3.11 porcupine docs/extensions.py
 
   pytest:
     timeout-minutes: 10
     strategy:
       matrix:
         os: ["ubuntu-latest", "windows-latest"]
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -60,7 +61,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
@@ -82,7 +83,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.11"
         cache: pip
     # TODO: adding these to requirements-dev.txt breaks pip install
     - run: pip install flake8==5.0.4 flake8-tkinter==0.5.0
