--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,10 @@ env*/
 # Rope project settings
 .ropeproject
 
+# Mac stuff
+.DS_Store
 
 # other stuff i have needed to add
 .pytest_cache
 playground.*
+.vscode/
