--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ pytest-mock==3.10.0
 pycln==2.1.3
 black==23.1.0
 isort==5.12.0
+pyupgrade==3.9.0
 sphinx>=4.0.0, <5.0.0
 pillow>=5.4.1
 requests>=2.24.0, <3.0.0
