--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "pytest-mock==3.10.0",
     "pycln==2.1.3",
     "black==23.1.0",
-    "isort==5.12.0",
+    "ruff==0.0.282",
     "pyupgrade==3.9.0",
     "sphinx>=4.0.0, <5.0.0",
     "pillow>=5.4.1",
