--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,10 @@ license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = []  # Do not attempt to import porcupine before dependencies are installed
 dependencies = [
-    "platformdirs>=3.0.0,<4.0.0",
-    "Pygments==2.12.0", # pygments version fixed because haxx in highlight plugin
-    "toposort>=1.5",
-    "colorama>=0.2.5",
+    "platformdirs>=3.10.0,<4.0.0",
+    "pygments==2.16.1", # pygments version fixed because haxx in highlight plugin
+    "toposort>=1.10",
+    "colorama>=0.4.6",
     "sansio-lsp-client>=0.10.0,<0.11.0",
     "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
     # black and isort minimum versions should be something old and kinda reasonable.
@@ -38,39 +38,39 @@ dependencies = [
     "isort>=5.10",
     # typing.Literal is new in python 3.8
     "typing_extensions",
-    "dacite>=1.5.1,<2.0.0",
+    "dacite>=1.8.1,<2.0.0",
     "tomli==2.0.1",
-    "send2trash>=1.8.0,<2.0.0",
-    "psutil>=5.8.0,<6.0.0",
-    "PyYAML==6.0",
+    "send2trash>=1.8.2,<2.0.0",
+    "psutil>=5.9.5,<6.0.0",
+    "pyyaml==6.0.1",
     "tree-sitter-builds==2023.3.12",
     "sv-ttk>=2.5.5",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest==6.2.5",
+    "pytest==7.4.0",
     "pytest-randomly==3.13.0",
-    "pytest-cov==4.0.0",
-    "pytest-mock==3.10.0",
-    "pycln==2.1.3",
-    "black==23.1.0",
+    "pytest-cov==4.1.0",
+    "pytest-mock==3.11.1",
+    "pycln==2.2.1",
+    "black==23.7.0",
     "ruff==0.0.282",
-    "pyupgrade==3.9.0",
+    "pyupgrade==3.10.1",
     "sphinx>=4.0.0, <5.0.0",
-    "pillow>=5.4.1",
-    "requests>=2.24.0, <3.0.0",
+    "pillow>=10.0.0",
+    "requests>=2.31.0, <3.0.0",
     "mypy==1.1.1", # exact versions to avoid "works on my computer" problems
-    "types-Pygments==2.14.0.6",
-    "types-docutils==0.19.1.6",
-    "types-Send2Trash==1.8.2.4",
-    "types-setuptools==67.6.0.5",
-    "types-colorama==0.4.15.8",
-    "types-toposort==1.10.0.0",
-    "types-psutil==5.9.5.10",
-    "types-PyYAML==6.0.12.8",
-    "types-tree-sitter==0.20.1.2",
-    "types-tree-sitter-languages==1.5.0.2",
+    "types-Pygments==2.16.0.0",
+    "types-docutils==0.20.0.1",
+    "types-Send2Trash==1.8.2.7",
+    "types-setuptools==68.0.0.3",
+    "types-colorama==0.4.15.12",
+    "types-toposort==1.10.0.1",
+    "types-psutil==5.9.5.16",
+    "types-PyYAML==6.0.12.11",
+    "types-tree-sitter==0.20.1.4",
+    "types-tree-sitter-languages==1.7.0.1",
 ]
 
 [project.scripts]
