--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ dacite>=1.5.1,<2.0.0
 tomli==2.0.1
 send2trash>=1.8.0,<2.0.0
 psutil>=5.8.0,<6.0.0
-PyYAML==6.0
+PyYAML>=6.0,<7
 tree-sitter-builds==2023.3.12
 sv-ttk>=2.5.5
