--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: "3.8"  # last version supporting windows 7
         cache: pip
     - run: pip install wheel
-    - run: pip install -r requirements.txt -r requirements-dev.txt
+    - run: pip install -r requirements-dev.txt
     - uses: egor-tensin/setup-clang@v1
       with:
         platform: x64
@@ -34,7 +34,7 @@ jobs:
         python-version: "3.11"
         cache: pip
     - run: pip install wheel
-    - run: pip install -r requirements.txt -r requirements-dev.txt
+    - run: pip install -r requirements-dev.txt
     - run: python3 -m sphinx ./docs ./build
     - if: startsWith(github.ref, 'refs/tags/v')
       uses: JamesIves/github-pages-deploy-action@4.1.3
