--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
     "psutil>=5.8.0,<6.0.0",
     "PyYAML==6.0",
     "tree-sitter-builds==2023.3.12",
-    "sv-ttk>=2.5.5",
+    # TODO: upgrade sv-ttk
+    "sv-ttk==2.5.5",
 ]
 
 [project.optional-dependencies]
