--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -59,7 +59,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # https://stackoverflow.com/a/58478262
-    needs: [windows-build, docs, changelog]
+    #needs: [windows-build, docs, changelog]
+    needs: [windows-build, changelog]
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
     - uses: actions/download-artifact@v2
