--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
     "tomli==2.0.1",
     "send2trash>=1.8.0,<2.0.0",
     "psutil>=5.8.0,<6.0.0",
-    "PyYAML==6.0",
+    "PyYAML>=6.0,<7",
     "tree-sitter-builds==2023.3.12",
     # TODO: upgrade sv-ttk
     "sv-ttk==2.5.5",
