--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,13 +28,12 @@ jobs:
         time mypy --platform darwin --python-version 3.10 porcupine docs/extensions.py
         time mypy --platform darwin --python-version 3.11 porcupine docs/extensions.py
 
-  pytest:
+  pytest-windows:
     timeout-minutes: 10
+    runs-on: windows-latest
     strategy:
       matrix:
-        os: ["ubuntu-latest", "windows-latest"]
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -43,16 +42,29 @@ jobs:
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
-    - if: matrix.os == 'ubuntu-latest'
-      # Make sure that it doesn't crash with Noto Color Emoji installed
-      run: sudo apt install --no-install-recommends fonts-noto-color-emoji tkdnd
-    - if: matrix.os == 'windows-latest'
+    - name: Download tkdnd
       run: |
         python scripts/download-tkdnd.py
         echo "TCLLIBPATH=lib" >> $env:GITHUB_ENV
-    - uses: GabrielBB/xvfb-action@v1.4
+    - run: python -m pytest --durations=10
+
+  pytest-linux:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
-        run: python -m pytest --durations=10
+        python-version: ${{ matrix.python-version }}
+        cache: pip
+    - run: pip install wheel
+    - run: pip install -r requirements-dev.txt
+    # Make sure that it doesn't crash with Noto Color Emoji installed
+    - run: sudo apt install --no-install-recommends fonts-noto-color-emoji tkdnd xvfb
+    - run: xvfb-run python -m pytest --durations=10
 
   # Separate from other pytests because tkinter doesn't work on macos with actions/setup-python.
   # It imports, but gives this error:    RuntimeError: tk.h version (8.6) doesn't match libtk.a version (8.5)
