--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,33 +7,34 @@ on:
 
 jobs:
   mypy:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Mypy running on platform A can check for platform B, so it all runs on linux.
+        # Multiple parallel jobs are needed only to make this faster.
+        mypy-platform: ["linux", "win32", "darwin"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
     - run: |
-        time mypy --platform linux --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform linux --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform linux --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.11 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.8 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.9 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.10 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.11 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.12 porcupine docs/extensions.py
 
   pytest-windows:
     timeout-minutes: 10
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -53,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -73,7 +74,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
@@ -96,7 +97,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
         cache: pip
     # TODO: adding these to requirements-dev.txt breaks pip install
     - run: pip install flake8==5.0.4 flake8-tkinter==0.5.0
@@ -109,7 +110,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
         cache: pip
     - run: pip install requests
     - run: python3 scripts/check-markdown-links.py
