--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -11,7 +11,9 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.8"  # last version supporting windows 7
+        # This should be the oldest python version we support, so it is
+        # backwards-compatible for older windows versions.
+        python-version: "3.9"  
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
