--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.12"
+        python-version: "3.11"
         cache: pip
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
@@ -26,14 +26,13 @@ jobs:
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.9 porcupine docs/extensions.py
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.10 porcupine docs/extensions.py
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.11 porcupine docs/extensions.py
-        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.12 porcupine docs/extensions.py
 
   pytest-windows:
     timeout-minutes: 10
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -53,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -73,7 +72,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
@@ -94,7 +93,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.12"
+        python-version: "3.11"
         cache: pip
     # TODO: adding these to requirements-dev.txt breaks pip install
     - run: pip install flake8==5.0.4 flake8-tkinter==0.5.0
@@ -107,7 +106,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: "3.12"
+        python-version: "3.11"
         cache: pip
     - run: pip install requests
     - run: python3 scripts/check-markdown-links.py
