--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -98,8 +98,7 @@ jobs:
       with:
         python-version: "3.11"
         cache: pip
-    # TODO: adding these to requirements-dev.txt breaks pip install
-    - run: pip install flake8==5.0.4 flake8-tkinter==0.5.0
+    - run: pip install -r requirements-dev.txt
     - run: python3 -m flake8 --select=TK $(git ls-files | grep -E '\.(py|pyw)$')
 
   markdown-links:
