--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -98,7 +98,7 @@ jobs:
       with:
         python-version: "3.11"
         cache: pip
-    - run: pip install -r requirements-dev.txt
+    - run: pip install flake8=='7.*' flake8_tkinter==0.6.0
     - run: python3 -m flake8 --select=TK $(git ls-files | grep -E '\.(py|pyw)$')
 
   markdown-links:
