--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,7 +7,13 @@ on:
 
 jobs:
   mypy:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Mypy running on platform A can check for platform B, so it all runs on linux.
+        # Multiple parallel jobs are needed only to make this faster.
+        mypy-platform: ["linux", "win32", "darwin"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -17,23 +23,16 @@ jobs:
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
     - run: |
-        time mypy --platform linux --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform linux --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform linux --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform win32 --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.8 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.9 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.10 porcupine docs/extensions.py
-        time mypy --platform darwin --python-version 3.11 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.9 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.10 porcupine docs/extensions.py
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.11 porcupine docs/extensions.py
 
   pytest-windows:
     timeout-minutes: 10
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -53,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -73,7 +72,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
@@ -81,9 +80,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: brew install python@${{ matrix.python-version }}
-    # https://stackoverflow.com/a/66919851
-    - if: matrix.python-version != '3.8'
-      run: brew install python-tk@${{ matrix.python-version }}
+    - run: brew install python-tk@${{ matrix.python-version }}
     - run: $PYTHON --version
     - run: $PYTHON -m pip install -r requirements-dev.txt
     - run: $PYTHON scripts/download-tkdnd.py
