--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -95,6 +95,7 @@ jobs:
       with:
         python-version: "3.11"
         cache: pip
+    # TODO: adding these to requirements-dev.txt breaks pip install
     - run: pip install flake8=='7.*' flake8_tkinter==0.6.0
     - run: python3 -m flake8 --select=TK $(git ls-files | grep -E '\.(py|pyw)$')
 
