--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -81,6 +81,8 @@ jobs:
     - uses: actions/checkout@v4
     - run: brew install python@${{ matrix.python-version }}
     - run: brew install python-tk@${{ matrix.python-version }}
+    - run: ls /usr/local/opt
+    - run: find /usr/local/opt -name 'python*'
     - run: $PYTHON --version
     - run: $PYTHON -m pip install -r requirements-dev.txt
     - run: $PYTHON scripts/download-tkdnd.py
