--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -76,12 +76,18 @@ jobs:
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
-      PYTHON: /usr/local/opt/python@${{ matrix.python-version }}/libexec/bin/python
     steps:
     - uses: actions/checkout@v4
     - run: brew install python@${{ matrix.python-version }}
     - run: brew install python-tk@${{ matrix.python-version }}
     - run: brew list python@${{ matrix.python-version }}
+    - name: Set $PYTHON to point at the Python executable
+      # Example path: /opt/homebrew/Cellar/python@3.10/3.10.14/bin/python3.10
+      run: |
+        (
+          echo -n PYTHON=
+          echo /opt/homebrew/Cellar/python@${{ matrix.python-version }}/${{ matrix.python-version }}.*/bin/python${{ matrix.python-version }}
+        ) | tee -a $GITHUB_ENV
     - run: ls /usr/local/opt
     - run: find /usr/local/opt -name 'python*'
     - run: $PYTHON --version
