Fix macos CI (#1508)

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -69,7 +69,9 @@ jobs:
   # It imports, but gives this error:    RuntimeError: tk.h version (8.6) doesn't match libtk.a version (8.5)
   pytest-macos:
     timeout-minutes: 15
-    runs-on: macos-latest
+    # TODO: run tests on M1 macos when we no longer need tree-sitter-builds.
+    # This was never supported by tree-sitter-builds: https://github.com/Akuli/py-tree-sitter-builds/issues/11
+    runs-on: macos-13  # latest intel mac
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
