--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,16 +23,18 @@ jobs:
     - run: pip install wheel
     - run: pip install -r requirements-dev.txt
     - run: |
-        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.9 porcupine
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.10 porcupine
         time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.11 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.12 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.13 porcupine
+        time mypy --platform ${{ matrix.mypy-platform }} --python-version 3.14 porcupine
 
   pytest-windows:
     timeout-minutes: 10
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
     - uses: actions/checkout@v6
     - uses: actions/setup-python@v5
@@ -52,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
     - uses: actions/checkout@v6
     - uses: actions/setup-python@v5
@@ -74,7 +76,7 @@ jobs:
     runs-on: macos-13  # latest intel mac
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     env:
       # TODO: how to install tkdnd on mac? add instructions to README or make mac app that bundles it
       TCLLIBPATH: ./lib
